[WFCORE-5936] Ldap autentication using referrals fails on JDK 17 with ApacheDS